// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anonymous reference 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<target ids=\\"auto1\\" refuri=\\"http://www.python.org\\" anonymous=\\"1\\"></target></document>"
`;

exports[`Anonymous via .. 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<target ids=\\"auto1\\" refuri=\\"http://www.python.org\\" anonymous=\\"1\\"></target></document>"
`;

exports[`Anonymous via .. no blankFinish 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<target ids=\\"auto1\\" refuri=\\"http://www.python.org\\" anonymous=\\"1\\"></target></document>"
`;

exports[`Bullet list, invalid input 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item></bullet_list><system_message line=\\"2\\"><paragraph>Bullet list ends without a blank line; unexpected unindent.</paragraph></system_message><paragraph>invalid</paragraph></document>"
`;

exports[`Bullet list, invalid input doctest 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item></bullet_list><system_message line=\\"2\\"><paragraph>Bullet list ends without a blank line; unexpected unindent.</paragraph></system_message><doctest_block>&gt;&gt;&gt; foo</doctest_block></document>"
`;

exports[`Bullet list, invalid input field marker 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item></bullet_list><system_message line=\\"2\\"><paragraph>Bullet list ends without a blank line; unexpected unindent.</paragraph></system_message><field_list><field><field_name>Hello</field_name><field_body><paragraph>foo</paragraph></field_body></field></field_list></document>"
`;

exports[`Bullet list, invalid input line 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item></bullet_list><system_message line=\\"2\\"><paragraph>Bullet list ends without a blank line; unexpected unindent.</paragraph></system_message><transition></transition></document>"
`;

exports[`Bullet no unindent 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item></bullet_list></document>"
`;

exports[`Emphasis 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><emphasis>hello</emphasis></paragraph></document>"
`;

exports[`Emphasis and inline 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><emphasis>hello</emphasis> and <strong>goodbye</strong></paragraph></document>"
`;

exports[`Emphasis followed by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><emphasis>hello</emphasis> test</paragraph></document>"
`;

exports[`Emphasis preceded by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>stuff <emphasis>hello</emphasis></paragraph></document>"
`;

exports[`Emphasis surrounded by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>stuff <emphasis>hello</emphasis> things</paragraph></document>"
`;

exports[`Field list 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<field_list>
<field>
<field_name>Author</field_name><field_body><paragraph>David Goodger</paragraph></field_body></field><field><field_name>Contact</field_name><field_body><paragraph>docutils-develop@lists.sourceforge.net</paragraph></field_body></field><field><field_name>Revision</field_name><field_body><paragraph>$Revision: 8205 $</paragraph></field_body></field><field><field_name>Date</field_name><field_body><paragraph>$Date: 2017-11-27 03:07:28 -0800 (Mon, 27 Nov 2017) $</paragraph></field_body></field><field><field_name>Copyright</field_name><field_body><paragraph>This document has been placed in the public domain.</paragraph></field_body></field></field_list></document>"
`;

exports[`Incomplete title 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<system_message line=\\"1\\">
<paragraph>Incomplete section title.</paragraph><literal_block>=====
Title</literal_block></system_message></document>"
`;

exports[`Inline followed by emphasis 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><strong>hello</strong> and <emphasis>goodbye</emphasis></paragraph></document>"
`;

exports[`Links 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<target ids=\\"a\\\\ restructuredtext primer\\" names=\\"a\\\\ restructuredtext primer\\" refuri=\\"../../user/rst/quickstart.html\\"></target><target ids=\\"quick\\\\ restructuredtext\\" names=\\"quick\\\\ restructuredtext\\" refuri=\\"../../user/rst/quickref.html\\"></target></document>"
`;

exports[`Mixed bullets 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item></bullet_list><system_message line=\\"2\\"><paragraph>Bullet list ends without a blank line; unexpected unindent.</paragraph></system_message><bullet_list bullet=\\"+\\"><list_item><paragraph>bullet</paragraph></list_item></bullet_list></document>"
`;

exports[`Nested bullets 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item></bullet_list><block_quote><bullet_list bullet=\\"+\\"><list_item><paragraph>bullet</paragraph></list_item><list_item><paragraph>bullet</paragraph></list_item></bullet_list></block_quote><bullet_list bullet=\\"*\\"><list_item><paragraph>bullet</paragraph></list_item></bullet_list></document>"
`;

exports[`Nested sections 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<section ids=\\"title\\" names=\\"title\\">
<title>Title</title><paragraph>Section-------</paragraph><paragraph>Third@@@@@</paragraph></section><section ids=\\"second\\" names=\\"second\\"><title>Second</title><section ids=\\"ooops\\" names=\\"ooops\\"><title>Ooops</title></section></section></document>"
`;

exports[`Paragraph ending in :: 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>This is my paragraph ending in:</paragraph><system_message line=\\"1\\"><paragraph>Literal block expected; none found.</paragraph></system_message></document>"
`;

exports[`Random 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item><list_item><paragraph>bullet</paragraph></list_item></bullet_list></document>"
`;

exports[`Random 2 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<section ids=\\"header\\\\ 1\\" names=\\"header\\\\ 1\\">
<title>Header 1</title><paragraph>Text</paragraph><section ids=\\"header\\\\ 2\\" names=\\"header\\\\ 2\\"><title>Header 2</title><system_message line=\\"6\\"><paragraph>Title underline too short.</paragraph><literal_block>Header 2
-------</literal_block></system_message></section></section></document>"
`;

exports[`Random 2 2`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>Test.
Test2
Test3
-----</paragraph></document>"
`;

exports[`Random 4 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<section ids=\\"test3\\" names=\\"test3\\">
<title>Test3</title><paragraph>This is a test.</paragraph><bullet_list bullet=\\"*\\"><list_item><paragraph>BUllet list 1</paragraph></list_item><list_item><paragraph>The emacs rst editor is weird.</paragraph></list_item></bullet_list></section></document>"
`;

exports[`Random indent 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
</document>"
`;

exports[`Short overline 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<system_message line=\\"1\\">
<paragraph>Possible incomplete section title.
Treating the overline as ordinary text because it&apos;s so short.</paragraph></system_message><paragraph>===
Title
===</paragraph></document>"
`;

exports[`Short overline 2 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<system_message line=\\"1\\">
<paragraph>Possible incomplete section title.
Treating the overline as ordinary text because it&apos;s so short.</paragraph></system_message><paragraph>===
Title</paragraph></document>"
`;

exports[`Strong 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><strong>hello</strong></paragraph></document>"
`;

exports[`Title 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<section ids=\\"title\\" names=\\"title\\">
<title>Title</title><paragraph>Paragraph.</paragraph></section></document>"
`;

exports[`Transition marker 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<transition>
</transition></document>"
`;

exports[`block quote 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<block_quote>
<paragraph>Block quotes consist of indented body elements:</paragraph><block_quote><paragraph>This theory, that is mine, is mine.</paragraph></block_quote><attribution>Anne Elk (Miss)</attribution></block_quote></document>"
`;

exports[`bullet from spec 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<bullet_list bullet=\\"-\\">
<list_item>
<paragraph>This is a bullet list.</paragraph></list_item><list_item><paragraph>Bullets can be &quot;*&quot;, &quot;+&quot;, or &quot;-&quot;.</paragraph></list_item></bullet_list></document>"
`;

exports[`complex 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<bullet_list bullet=\\"-\\">
<list_item>
<paragraph>This is the first line of a bullet list
item&apos;s paragraph.  All lines must align
relative to the first line.  <footnote_reference ids=\\"auto1\\" refname=\\"1\\">1</footnote_reference></paragraph><block_quote><paragraph>This indented paragraph is interpreted
as a block quote.</paragraph></block_quote></list_item></bullet_list><paragraph>Because it is not sufficiently indented,
this paragraph does not belong to the list
item.</paragraph><citation ids=\\"1\\" names=\\"1\\"><label>1</label><paragraph>marker is what determines the indentation.</paragraph></citation></document>"
`;

exports[`definition list 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<definition_list>
<definition_list_item>
<term>what</term><definition><paragraph>Definition lists associate a term with a definition.</paragraph></definition></definition_list_item><definition_list_item><term>how</term><definition><paragraph>The term is a one-line phrase, and the definition is one
or more paragraphs or body elements, indented relative to
the term.</paragraph></definition></definition_list_item></definition_list></document>"
`;

exports[`doctest block 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<block_quote>
<doctest_block>&gt;&gt;&gt; print &apos;Python-specific usage examples; begun with &quot;&gt;&gt;&gt;&quot;&apos;
Python-specific usage examples; begun with &quot;&gt;&gt;&gt;&quot;
&gt;&gt;&gt; print &apos;(cut and pasted from interactive Python sessions)&apos;
(cut and pasted from interactive Python sessions)</doctest_block></block_quote></document>"
`;

exports[`docutils title 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<section ids=\\"docutils\\\\ project documentation overview\\" names=\\"docutils\\\\ project documentation overview\\">
<title><reference name=\\"Docutils\\" refname=\\"docutils\\">Docutils</reference> Project Documentation Overview</title></section></document>"
`;

exports[`full rst2xml pipeline with specific input 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>Want to learn about <reference name=\\"my favorite programming language\`\\" refname=\\"my favorite programming language\`\\">my favorite programming language\`</reference>?</paragraph><target ids=\\"auto1\\" refuri=\\"myfavoriteprogramminglanguage:http://www.python.org\\" anonymous=\\"1\\"></target></document>"
`;

exports[`grid table 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<block_quote>
<table>
<tgroup cols=\\"0\\">
<thead>
</thead><tbody>
</tbody></tgroup></table></block_quote></document>"
`;

exports[`literal block 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<block_quote>
<paragraph>Literal blocks are either indented or line-prefix-quoted blocks,
and indicated with a double-colon (&quot;::&quot;) at the end of the
preceding paragraph (right here --&gt;):</paragraph><literal_block>if literal_block:
    text = &apos;is left as-is&apos;
    spaces_and_linebreaks = &apos;are preserved&apos;
    markup_processing = None</literal_block></block_quote></document>"
`;

exports[`literal block without blank finish 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<block_quote>
<paragraph>Literal blocks are either indented or line-prefix-quoted blocks,
and indicated with a double-colon (&quot;::&quot;) at the end of the
preceding paragraph (right here --&gt;):</paragraph><literal_block>if literal_block:
    text = &apos;is left as-is&apos;
    spaces_and_linebreaks = &apos;are preserved&apos;
    markup_processing = None</literal_block></block_quote></document>"
`;

exports[`multilevel blockquote 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>This is a top-level paragraph.</paragraph><block_quote><paragraph>This paragraph belongs to a first-level block quote.</paragraph><block_quote><paragraph>This paragraph belongs to a second-level block quote.</paragraph></block_quote></block_quote><paragraph>Another top-level paragraph.</paragraph><block_quote><block_quote><paragraph>This paragraph belongs to a second-level block quote.</paragraph></block_quote><paragraph>This paragraph belongs to a first-level block quote.  The
second-level block quote above is inside this first-level
block quote.</paragraph></block_quote></document>"
`;

exports[`option list 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<block_quote>
<option_list>
<option_list_item>
<option_group>
<option>
<option_string>-a</option_string></option></option_group><description><paragraph>command-line option &quot;a&quot;</paragraph></description></option_list_item><option_list_item><option_group><option><option_string>-b</option_string><option_argument delimiter=\\"\\"> file</option_argument></option></option_group><description><paragraph>options can have arguments
and long descriptions</paragraph></description></option_list_item><option_list_item><option_group><option><option_string>--long</option_string></option></option_group><description><paragraph>options can be long also</paragraph></description></option_list_item><option_list_item><option_group><option><option_string>--input</option_string><option_argument delimiter=\\"=\\">file</option_argument></option></option_group><description><paragraph>long options can also have
arguments</paragraph></description></option_list_item><option_list_item><option_group><option><option_string>/V</option_string></option></option_group><description><paragraph>DOS/VMS-style options too</paragraph></description></option_list_item></option_list></block_quote></document>"
`;

exports[`program lang 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>Want to learn about <reference name=\\"my favorite programming language\`\\" refname=\\"my favorite programming language\`\\">my favorite programming language\`</reference>?</paragraph><target ids=\\"my\\\\ favorite programming language\\" names=\\"my\\\\ favorite programming language\\" refuri=\\"http://www.python.org\\"></target></document>"
`;

exports[`simple table 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<block_quote>
<system_message line=\\"1[object Object]\\">
<paragraph>Malformed table.</paragraph><literal_block>====================  ==========  ==========
Header row, column 1  Header 2    Header 3
====================  ==========  ==========
body row 1, column 1  column 2    column 3
body row 2            Cells may span columns
====================  ======================</literal_block></system_message></block_quote></document>"
`;

exports[`substitution definition 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
</document>"
`;

exports[`tabs 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>hello   tabs</paragraph></document>"
`;
